--- a/src/dk/easv/presentation/view/movie layout.fxml
+++ b/src/dk/easv/presentation/view/movie layout.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LayoutController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LayoutController">
    <top>
       <MenuBar useSystemMenuBar="true">
         <menus>
@@ -100,7 +92,7 @@
                                     <Image url="@../../../../../Pictures/Doggo.jpg" />
                                  </image>
                               </ImageView>
-                              <TextArea editable="false" prefHeight="150.0" prefWidth="335.0" text="Mork is a computer file format used by several email clients and web browsers produced by Netscape, and later, Mozilla Foundation. It was developed by David McCusker[1] with the aim of creating a minimal database replacement that would be reliable, flexible, and efficient, and use a file format close to plain text.[2]" wrapText="true">
+                              <TextArea prefHeight="150.0" prefWidth="335.0" text="Mork is a computer file format used by several email clients and web browsers produced by Netscape, and later, Mozilla Foundation. It was developed by David McCusker[1] with the aim of creating a minimal database replacement that would be reliable, flexible, and efficient, and use a file format close to plain text.[2]" wrapText="true">
                                  <opaqueInsets>
                                     <Insets right="5.0" />
                                  </opaqueInsets>
