--- a/src/dk/easv/presentation/view/LogIn.fxml
+++ b/src/dk/easv/presentation/view/LogIn.fxml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LogInController">
+<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LogInController">
    <center>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="460.0">
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="500.0">
          <children>
-            <GridPane layoutX="104.0" layoutY="49.0" prefHeight="110.0" prefWidth="245.0">
+            <GridPane layoutX="104.0" layoutY="49.0" prefHeight="110.0" prefWidth="250.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="125.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
@@ -16,8 +26,8 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <PasswordField fx:id="passwordField" disable="true" GridPane.rowIndex="1" />
-                  <TextField fx:id="userId" text="Georgi Facello" />
+                  <MFXPasswordField fx:id="passwordField" prefHeight="50.0" prefWidth="253.0" GridPane.rowIndex="1" />
+                  <MFXTextField fx:id="userId" prefHeight="27.0" prefWidth="250.0" />
                </children>
             </GridPane>
             <GridPane layoutX="160.0" layoutY="159.0" prefHeight="30.0" prefWidth="133.0">
@@ -28,12 +38,22 @@
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
-               <children>
-                  <Button mnemonicParsing="false" onAction="#logIn" text="log - in" />
-                  <Button mnemonicParsing="false" onAction="#signUp" text="Sig - Up" GridPane.columnIndex="1" />
-               </children>
             </GridPane>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="193.0" layoutY="5.0" prefHeight="26.0" prefWidth="250.0" text="Please login" textAlignment="CENTER" AnchorPane.bottomAnchor="199.0" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="25.0">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <ButtonBar layoutX="150.0" layoutY="190.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0">
+              <buttons>
+                  <MFXButton buttonType="RAISED" minWidth="69.0" onAction="#logIn" prefHeight="24.0" prefWidth="109.0" rippleAnimateShadow="true" rippleColor="#00ff6f" text="Login" />
+                  <MFXButton buttonType="RAISED" onAction="#signUp" rippleAnimateShadow="true" rippleColor="RED" text="Sign up" />
+              </buttons>
+            </ButtonBar>
          </children>
+         <effect>
+            <Blend />
+         </effect>
       </AnchorPane>
    </center>
 </BorderPane>
