--- a/src/dk/easv/presentation/view/LogIn.fxml
+++ b/src/dk/easv/presentation/view/LogIn.fxml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import io.github.palexdev.materialfx.controls.MFXPasswordField?>
-<?import io.github.palexdev.materialfx.controls.MFXTextField?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import io.github.palexdev.materialfx.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LogInController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.LogInController">
    <center>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="500.0">
          <children>
@@ -26,8 +19,8 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <MFXPasswordField fx:id="passwordField" prefHeight="50.0" prefWidth="253.0" GridPane.rowIndex="1" />
-                  <MFXTextField fx:id="userId" prefHeight="27.0" prefWidth="250.0" />
+                  <MFXPasswordField fx:id="passwordField" floatMode="ABOVE" prefHeight="26.0" prefWidth="250.0" GridPane.rowIndex="1" />
+                  <MFXTextField fx:id="userId" floatMode="ABOVE" prefHeight="27.0" prefWidth="250.0" text="Bezalel Simmel" />
                </children>
             </GridPane>
             <GridPane layoutX="160.0" layoutY="159.0" prefHeight="30.0" prefWidth="133.0">
