--- a/src/dk/easv/presentation/view/MovieLayout.fxml
+++ b/src/dk/easv/presentation/view/MovieLayout.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.MovieLayoutController">
+<AnchorPane maxWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.presentation.controller.MovieLayoutController">
    <children>
       <BorderPane prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -40,7 +41,7 @@
                               </Label>
                               <HBox alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="591.0">
                                  <children>
-                                    <TextField alignment="CENTER" prefHeight="26.0" prefWidth="190.0" text="Search..." />
+                                    <MFXTextField fx:id="txtSearch" alignment="CENTER" floatMode="ABOVE" prefHeight="5.0" prefWidth="246.0" text="Search..." />
                                  </children>
                               </HBox>
                            </children>
@@ -61,7 +62,7 @@
                                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                              </HBox.margin>
                                           </ImageView>
-                                          <TextArea fx:id="text1" prefHeight="193.0" prefWidth="578.0" />
+                                          <TextArea fx:id="text1" prefHeight="179.0" prefWidth="578.0" wrapText="true" />
                                        </children>
                                     </HBox>
                                     <HBox prefHeight="28.0" prefWidth="800.0">
@@ -440,22 +441,26 @@
             </ScrollPane>
          </center>
          <top>
-            <HBox alignment="CENTER" prefHeight="26.0" prefWidth="800.0">
+            <HBox alignment="TOP_RIGHT" nodeOrientation="LEFT_TO_RIGHT" prefHeight="33.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                <children>
-                  <MenuBar HBox.hgrow="ALWAYS">
-                    <menus>
-                      <Menu fx:id="menuHome" mnemonicParsing="false" text="Home" />
-                      <Menu fx:id="menuRecommended" mnemonicParsing="false" text="Recommended" />
-                      <Menu fx:id="menuDiscover" mnemonicParsing="false" text="Discover" />
-                        <Menu fx:id="menuWatchAgain" mnemonicParsing="false" text="Watch Again" />
-                        <Menu fx:id="menuRandomMovies" mnemonicParsing="false" text="Random movies" />
-                    </menus>
-                  </MenuBar>
-                  <MenuBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="26.0" prefWidth="375.0" HBox.hgrow="ALWAYS">
-                     <menus>
-                        <Menu fx:id="menuLogOut" mnemonicParsing="false" text="Log out" />
-                     </menus>
-                  </MenuBar>
+                  <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="33.0" prefWidth="672.0">
+                    <buttons>
+                        <ToggleButton fx:id="menuRandomMovies" mnemonicParsing="false" text="Random movies">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="MenuGroup" />
+                           </toggleGroup>
+                        </ToggleButton>
+                        <ToggleButton fx:id="menuWatchAgain" mnemonicParsing="false" text="Watch again" textAlignment="CENTER" toggleGroup="$MenuGroup" />
+                        <ToggleButton fx:id="menuRecommended" mnemonicParsing="false" text="Recommended" toggleGroup="$MenuGroup" />
+                        <ToggleButton fx:id="menuDiscover" mnemonicParsing="false" text="Discover" toggleGroup="$MenuGroup" />
+                        <ToggleButton fx:id="menuHome" mnemonicParsing="false" text="Home" toggleGroup="$MenuGroup" />
+                    </buttons>
+                  </ButtonBar>
+                  <ButtonBar prefHeight="40.0" prefWidth="200.0">
+                     <buttons>
+                        <ToggleButton fx:id="menuLogOut" mnemonicParsing="false" text="Log out" />
+                     </buttons>
+                  </ButtonBar>
                </children>
             </HBox>
          </top>
