--- a/src/dk/easv/presentation/view/DarkModeRandom.css
+++ b/src/dk/easv/presentation/view/DarkModeRandom.css
@@ -1,53 +1,56 @@
 .background {
-    -fx-background-color: #DE857B;
+    -fx-background-color: #713731;
 }
 
 .label {
     -fx-font-size: 10pt;
-    -fx-text-fill: #1D0000;
+    -fx-text-fill: #000000;
 }
 
 .label-big {
     -fx-text-fill: transparent;
 }
 
+
 .mfx-text-field {
     -fx-font-size: 10pt;
-    -fx-background-color: #9D3B3B;
+    -fx-background-color: #5D1D1D;
     -fx-border-radius: 20 20 20 20;
     -fx-background-radius: 20 20 20 20;
-    -fx-text-fill: white;
+    -fx-text-fill: #000000;
     -fx-padding: 5px;
     -fx-prompt-text-fill: white;
 }
 
 .toggle-button {
     -fx-font-size: 10pt;
-    -fx-text-fill: white;
-    -fx-background-color: #C25252;
+    -fx-text-fill: #000000;
+    -fx-background-color: #5D1D1D;
 }
 
 .toggle-button:hover {
-    -fx-background-color:#9D3B3B;
+    -fx-background-color:#370A0A;
   }
 
 .toggle-button:selected {
-    -fx-background-color: #9D3B3B;
+    -fx-background-color: #370A0A;
   }
 
 .button-bar {
-    -fx-background-color: #C25252;
+    -fx-background-color: #5D1D1D;
 }
 
 .text-area {
    -fx-control-inner-background: transparent;
+   -fx-text-fill: #000000;
 }
 
 .scroll-pane {
-   -fx-background: #DE857B;
-   -fx-border-color: #DE857B;
+   -fx-background: #713731;
+   -fx-border-color: #713731;
 }
 
 .button {
-   -fx-background-color: #C25252;
+   -fx-background-color: #5D1D1D;
+   -fx-text-fill: #000000;
 }
