--- a/src/dk/easv/presentation/view/Recommended.css
+++ b/src/dk/easv/presentation/view/Recommended.css
@@ -11,15 +11,6 @@
     -fx-text-fill: transparent;
 }
 
-.menu-bar {
-    -fx-background-color: #765F88;
-}
-
-.menu-bar .label {
-    -fx-font-size: 13pt;
-    -fx-text-fill: white;
-}
-
 .mfx-text-field {
     -fx-font-size: 10pt;
     -fx-background-color: #4B1365;
@@ -55,4 +46,8 @@
 .scroll-pane {
    -fx-background: #9E839E;
    -fx-border-color: #9E839E;
+}
+
+.button {
+   -fx-background-color: #765F88
 }
