--- a/src/dk/easv/presentation/view/Recommended.css
+++ b/src/dk/easv/presentation/view/Recommended.css
@@ -5,6 +5,7 @@
 .label {
     -fx-font-size: 10pt;
     -fx-text-fill: #1D012F;
+    -fx-font-family: Garamond, serif;
 }
 
 .label-big {
@@ -19,16 +20,21 @@
     -fx-text-fill: white;
     -fx-padding: 5px;
     -fx-prompt-text-fill: white;
+    -fx-font-family: Georgia, serif;
 }
 
 .toggle-button {
     -fx-font-size: 10pt;
     -fx-text-fill: white;
     -fx-background-color: #765F88;
+    -fx-font-family: Georgia, serif;
 }
 
 .toggle-button:hover {
     -fx-background-color:#4B1365;
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-scale-z: 1.1;
   }
 
 .toggle-button:selected {
@@ -41,6 +47,11 @@
 
 .text-area {
    -fx-control-inner-background: transparent;
+   -fx-font-family: Garamond, serif;
+}
+
+.text-area *.text {
+    -fx-text-alignment: center;
 }
 
 .scroll-pane {
@@ -49,5 +60,18 @@
 }
 
 .button {
-   -fx-background-color: #765F88
+   -fx-background-color: #765F88;
+   -fx-font-family: Georgia, serif;
+}
+
+.button:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-scale-z: 1.1;
+}
+
+.image-view:hover {
+    -fx-scale-x: 1.1;
+    -fx-scale-y: 1.1;
+    -fx-scale-z: 1.1;
 }
